# deptrack-project

./: .gitignore  .gitmodules  .stylish-haskell.yaml  README.md  deptrack-devops.hsfiles  stack.yaml
deptrack-core/: ChangeLog.md  README.md  deptrack-core.cabal  stack.yaml
deptrack-core/src/: DepTrack.hs
deptrack-core/src/DepTrack/: DepCrumb.hs  FreeEncoding.hs  Parsing.hs
deptrack-devops/: ChangeLog.md  README.md  deptrack-devops.cabal  stack.yaml
deptrack-devops-examples/: README.md  deptrack-devops-examples.cabal  stack.yaml
deptrack-devops-examples/app/: DevVM.hs  Devtools.hs  Docker.hs  DockerizedWebsite.hs  DotNet.hs  Jenkins.hs  Main.hs  MultiOS.hs  Postgrest.hs  Qemu.hs  SampleDODroplet.hs  SparkCluster.hs  WebSite.hs
deptrack-devops-examples/src/Devops/: Cli.hs  MyLib.hs
deptrack-devops-recipes/: README.md  deptrack-devops-recipes.cabal  stack.yaml
deptrack-devops-recipes/src/Devops/: App.hs  Apparmor.hs  Archive.hs  Authentication.hs  BaseImage.hs  Binary.hs  Bootstrap.hs  Callback.hs  Debian.hs  Debootstrap.hs  Dhcp.hs  DnsResolver.hs  Docker.hs  DockerBootstrap.hs  DotNetCore.hs  Downloads.hs  Git.hs  Haskell.hs  ImageBootstrap.hs  Linux.hs  Networking.hs  Nginx.hs  OS.hs  Optimize.hs  Parasite.hs  Postgre.hs  Python.hs  Qemu.hs  QemuBootstrap.hs  QemuNbd.hs  R.hs  Ref.hs  Service.hs  StaticSite.hs  Storage.hs  SysQuery.hs  Utils.hs
deptrack-devops-recipes/src/Devops/Bootstrap/: Build.hs  DO.hs  Parasite.hs
deptrack-devops-recipes/src/Devops/Debian/: Base.hs  Commands.hs  Packages.hs  Repositories.hs  User.hs
deptrack-devops-recipes/src/Devops/MacOS/: Base.hs  Commands.hs  Packages.hs
deptrack-devops-recipes/src/Devops/Storage/: Base.hs  BlockDevice.hs  Format.hs  Mount.hs
deptrack-devops-recipes/src/Devops/Utils/: Build.hs  Docker.hs  IO.hs
deptrack-devops/src/Devops/: Actions.hs  Base.hs  Cli.hs  Constraints.hs  Graph.hs
deptrack-dot/: ChangeLog.md  README.md  package.yaml  stack.yaml
deptrack-dot/src/DepTrack/: Dot.hs
personal-configs/: ChangeLog.md  README.md  personal-configs.cabal
personal-configs/app/: Main.hs
personal-configs/src/: Configs.hs
