name:                deptrack-core
version:             0.1.0.0
synopsis:            DepTrack Core types and model.
description:         Rather than building and maintaing a dependency tree/graph by hand. DepTrack proposes to _track_ dependencies as a side-effect of a computation.
homepage:            https://github.com/lucasdicioccio/deptrack-project
license:             Apache-2.0
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Graphs
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    ChangeLog.md
    README.md

library
  exposed-modules:     DepTrack
                     , DepTrack.DepCrumb
                     , DepTrack.Parsing
  other-extensions:    TupleSections
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , DeriveFunctor
  build-depends:       base >= 4.10 && < 5.0
                     , containers >= 0.5 && < 0.6
                     , dlist >= 0.8 && < 0.9
                     , parsec >= 3.1 && < 3.2
                     , mtl >= 2.2 && < 2.3
  hs-source-dirs:      src
  default-language:    Haskell2010

