name:                deptrack-devops-examples
version:             0.1.0.0
synopsis:            Example use of deptrack-devops.
description:         Please see README.md
homepage:            https://github.com/lucasdicioccio/deptrack-project
license:             Apache-2.0
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            Devops
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Devops.Cli
  ghc-options:         -Wall -Werror
  build-depends:       base
                     , base64-bytestring
                     , binary
                     , bytestring
                     , containers
                     , deptrack-core
                     , distributed-closure
                     , deptrack-devops
                     , deptrack-devops-recipes
                     , dotgen
                     , mtl
                     , string-conversions
  default-language:    Haskell2010

executable deptrack-devops-example-devtools
  hs-source-dirs:      app
  main-is:             Devtools.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , string-conversions
  default-language:    Haskell2010

executable deptrack-devops-example-postgrest
  hs-source-dirs:      app
  main-is:             Postgrest.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , string-conversions
                     , text
  default-language:    Haskell2010

executable deptrack-devops-example-qemu
  hs-source-dirs:      app
  main-is:             Qemu.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , string-conversions
                     , text
  default-language:    Haskell2010

executable deptrack-devops-example-docker
  hs-source-dirs:      app
  main-is:             Docker.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , distributed-closure
                     , string-conversions
  default-language:    Haskell2010

executable deptrack-devops-example-website
  hs-source-dirs:      app
  main-is:             WebSite.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , string-conversions
  default-language:    Haskell2010

executable deptrack-devops-example-dockerized-website
  hs-source-dirs:      app
  main-is:             DockerizedWebsite.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , deptrack-core
                     , deptrack-devops
                     , deptrack-devops-examples
                     , deptrack-devops-recipes
                     , distributed-closure
                     , string-conversions
  default-language:    Haskell2010
