name:                deptrack-devops
version:             0.1.0.0
synopsis:            DepTrack applied to DevOps.
description:         Describe your infrastructure with a directed-acyclic graph. Please see README.md
homepage:            https://github.com/lucasdicioccio/deptrack-project
license:             Apache-2.0
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            DevOps
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Devops.Base
                       Devops.Actions
                       Devops.Cli
                       Devops.Graph
  build-depends:       base >= 4.7 && < 5
                     , array
                     , async
                     , base64-bytestring
                     , binary
                     , bytestring
                     , containers
                     , deptrack-core
                     , distributed-closure
                     , dotgen 
                     , hashable
                     , lens
                     , mtl
                     , safe
                     , stm
                     , string-conversions
                     , text
  default-language:    Haskell2010
