name:                deptrack-devops
version:             0.1.0.0
synopsis:            DepTrack applied to DevOps.
description:         Describe your infrastructure with a directed-acyclic graph. Please see README.md
homepage:            https://github.com/lucasdicioccio/deptrack-project
license:             Apache-2.0
license-file:        LICENSE
author:              Lucas DiCioccio
maintainer:          lucas@dicioccio.fr
copyright:           2017 Lucas DiCioccio
category:            DevOps
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
    ChangeLog.md
    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Devops.Base
                       Devops.Actions
                       Devops.Cli
                       Devops.Constraints
                       Devops.Graph
  build-depends:       base >= 4.11 && < 5
                      , array >= 0.5 && < 0.6
                      , async >= 2.2 && < 2.3
                      , base64-bytestring >= 1.0 && < 1.1
                      , binary >= 0.8 && < 0.9
                      , bytestring >= 0.10 && < 0.11
                      , containers >= 0.5 && < 0.6
                      , deptrack-core >= 0.1 && < 0.2
                      , distributed-closure >= 0.4 && < 0.5
                      , dotgen  >= 0.4 && < 0.5
                      , hashable >= 1.2 && < 1.3
                      , lens >= 4.16 && < 4.17
                      , mtl >= 2.2 && < 2.3
                      , safe >= 0.3 && < 0.4
                      , stm >= 2.4 && < 2.5
                      , text >= 1.2 && < 1.3
  default-language:    Haskell2010
